--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.0",
+    "pdfmake": "^0.2.9",
     "sequelize": "^6.35.2"
   }
 }
