--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@vercel/edge-config": "^1.1.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.0",
     "node-schedule": "^2.1.1",
     "pdfmake": "^0.2.9",
+    "pg": "^8.13.1",
     "sequelize": "^6.35.2"
   }
 }
